# media-sources

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
media_sources/: __init__.py  batch.py  detector.py  exceptions.py  factory.py  media_sources.py  models.py  utils.py
media_sources/readers/: _stream.py  base.py  image.py  rtsp.py  video.py  webcam.py  youtube.py
utils/: __init__.py  logger.py
